[package]
name = "rusty-chromaprint"
version = "0.2.0"
edition = "2021"
description = "Pure Rust port of Chromaprint"
license = "MIT"
homepage = "https://github.com/darksv/rusty-chromaprint"
repository = "https://github.com/darksv/rusty-chromaprint"
readme = "../README.md"
rust-version = "1.63"
exclude = ["data/**"]

[dependencies]
rustfft = "6.2.0"
rubato = "0.15.0"
